# baobab

./: Cargo.toml  README.md  index.html  rust-toolchain
.github/workflows/: rust.yml  typos.yml
assets/: gen_assets.sh  manifest.json  sw.js
src/: app.rs  lib.rs  main.rs
