[package]
name = "baobab"
version = "1.1.0"
authors = ["n4n5 <its.just.n4n5@gmail.com>"]
description = "boa_cli in egui"
edition = "2024"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
categories = ["gui", "command-line-interface"]
keywords = ["egui", "js", "boa-cli", "keyboard-shortcuts"]
license = "MIT"
rust-version = "1.91"
documentation = "https://docs.rs/baobab"
repository = "https://github.com/Its-Just-Nans/baobab"

[package.metadata.docs.rs]
all-features = true

[dependencies]
boa_engine = "0.21.1"
tokio = "1.53.1"
bladvak = "1.3.20"
serde = { version = "1.0.229", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }
time = { version = "0.3.54", features = ["wasm-bindgen"] }

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
